--- a/mi-portafolio/src/styles/Footer.scss
+++ b/mi-portafolio/src/styles/Footer.scss
@@ -9,3 +9,9 @@
     bottom: 0;
     width: 100%;
 }
+@media (max-width: $breakpoint-sm) {
+    .footer {
+        padding: 0.5rem;
+        font-size: 0.8rem;
+    }
+}
