--- a/mi-portafolio/src/styles/Navbar.scss
+++ b/mi-portafolio/src/styles/Navbar.scss
@@ -24,3 +24,10 @@
         }
     }
 }
+@media (max-width: $breakpoint-md) {
+    .navbar ul {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
+
