--- a/mi-portafolio/src/styles/Skills.scss
+++ b/mi-portafolio/src/styles/Skills.scss
@@ -115,3 +115,11 @@
         }
     }
 }
+@media (max-width: $breakpoint-md) {
+    .portfolio-grid {
+        grid-template-columns: 1fr;
+    }
+    .swiper-slide {
+        width: 100px;
+    }
+}
