--- a/mi-portafolio/src/styles/variables.scss
+++ b/mi-portafolio/src/styles/variables.scss
@@ -1,3 +1,8 @@
+// Breakpoints para media queries
+$breakpoint-sm: 480px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 1024px;
+
 // Colores
 $primary-color: #4caf50;
 $secondary-color: #333;
