--- a/mi-portafolio/src/styles/Contact.scss
+++ b/mi-portafolio/src/styles/Contact.scss
@@ -106,6 +106,11 @@
         }
     }
 }
+@media (max-width: $breakpoint-sm) {
+    .contact-options {
+        flex-direction: column;
+    }
+}
 
 
 // .contact-section {
